# Lakehouse-Pattern

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  REPO_META.md  SECURITY.md  TROUBLESHOOTING.md  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-upgrade.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  nightly.yml  release.yml
benchmarks/: README.md  run_benchmarks.py
compute/: README.md  all_purpose.json  jobs_cluster.json  serverless.json  sql_warehouse.json
data/sample_raw/: README.md  download.py
data/uci_online_retail/: __init__.py  download.py
docs/: architecture.md  concept-coverage.md  index.md  lineage.md  prebuild.py
docs/upgrade-plan/: README.md
federation/: README.md  postgres_catalog.py  queries.sql
governance/: README.md  unity_catalog_setup.sql
ingestion/: batch_ingest.py  streaming_ingest.py
lakebase/: README.md  __init__.py  pg_cdc.py  reverse_etl.py
lakehouse/: __init__.py  env.py  paths.py  schemas.py  spark.py
ml/: register_model.py  train_model.py
notebooks/: 01_lakehouse_walkthrough.ipynb  README.md
orchestration/: workflow.py
pipelines/: declarative_pipeline.py
serving/: app.py  metrics.py
sharing/: README.md  bearer_tokens.json  client_demo.py  config.json  recipient.share
tests/: conftest.py  test_data_quality.py  test_declarative_pipeline.py  test_delta_features.py  test_env.py  test_ml_serving_logic.py  test_orchestration.py  test_requirements_ci.py  test_streaming_ingest.py  test_transforms.py
transform/: gold_aggregate.py  modern_delta.py  silver_clean.py
(+48 files in other folders)
